# zip-fix-filename-encoding

./: .gitignore  Cargo.toml  ChangeLog  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
tests/: check-runzip.sh  integration_test.rs
